--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,7 @@
-node_modules
-package-lock.json
-build
-
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
+package-lock.json
 /node_modules
 /.pnp
 .pnp.js
@@ -17,6 +14,7 @@ build
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
